@@ -1,5 +1,10 @@
 $Id$
 
+2016-04-01  Douglas Gilbert  <dgilbert@interlog.com>
+
+	scsiprint.cpp: add missing commas in peripheral_dt_arr and
+        add number of elements (2**5) so that won't happen again.
+
 2016-03-31  Alex Samorukov  <samm@os2.kiev.ua>
 
 	drivedb.h: 
